# llm-lens

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  release.sh
llm_lens/: __init__.py  debloat.py  peek_cache.py  tag_set.py  tag_store.py
llm_lens/static/: index.html
llm_lens/static/css/: styles.css
llm_lens/static/js/: api.js  exports.js  main.js  modal.js  pill_list.js  preview.js  router.js  scopes.js  state.js  tag_components.js  tag_scope.js  toolbar.js  transforms.js  utils.js
llm_lens/static/js/views/: conversations.js  messages.js  projects.js
static/: index.html
static/css/: styles.css
static/js/: main.js  state.js  toolbar.js
static/js/views/: conversations.js  messages.js  projects.js
tests/: test_agent_header.py  test_debloat.py  test_edits.py  test_frontend_invariants.py  test_invariants.py  test_migration_e2e.py  test_search.py  test_smoke.py  test_tag_set.py  test_tag_store.py
tests/js/: test_bucket_filters.mjs  test_exports.mjs  test_highlight.mjs  test_initial_filters.mjs  test_pill_list.mjs  test_preview.mjs  test_transforms.mjs
