[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-lens-web"
version = "0.2.0"
description = "Local web UI for browsing and managing LLM CLI conversation history (currently: Claude Code)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "janet" }]
keywords = ["claude", "claude-code", "llm", "cli", "history", "sessions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
dependencies = [
    "flask>=2.0",
]

[project.scripts]
llm-lens-web = "llm_lens:main"

[project.urls]
Homepage = "https://github.com/jajanet/llm-lens"
Repository = "https://github.com/jajanet/llm-lens"

[tool.setuptools.packages.find]
include = ["llm_lens*"]

[tool.setuptools.package-data]
llm_lens = ["static/**/*"]
